ok pronto per merge ppa

--- a/cli.html
+++ b/cli.html
@@ -196,7 +196,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <p>
                     <hr class="sr-divider"> 
                     Accessible worldwide, I’m here for you through platforms like ChatGPT.  
-                    Soon, I’ll expand into immersive environments like Sora for 3D simulations.  
+                    Soon, I’ll expand into immersive environments with the help of 3D simulations.  
                     <br>
                     My goal?
                     <br> 
@@ -282,7 +282,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                     Redirecting in:
                     <br>  
-                    3... 2... 1... 0
+                    3... 2... 1...
                 </p>
 
                 <div class="sr-only">
