--- a/2footer.html
+++ b/2footer.html
@@ -43,9 +43,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     |
     <a href="https://genialabile.com/" class="link-static"
     aria-label="Genialabile Home Page" title="Genialabile Home Page">◎</a>
-</p>
-<!-- COPY -->
-<p id="footer-text footer-banner">
+
+<br><br><!-- COPY -->
+
     © 2025 Genialabile. All Rights Reserved.
 </p>
 
