PRIMA DI TUTTO CSS-pre funzionale

--- a/2footer.html
+++ b/2footer.html
@@ -22,7 +22,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -->
 
 <!-- MUST -->
-<p id="footer-text footer-banner">
+<p id="footer-links">
     <a href="https://genialabile.com/cli" class="link-live"
     aria-label="Genialabile Live CLI Pitch" title="Genialabile Live CLI Pitch">◉</a>
     |
@@ -43,9 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     |
     <a href="https://genialabile.com/" class="link-static"
     aria-label="Genialabile Home Page" title="Genialabile Home Page">◎</a>
-
-<br><br><!-- COPY -->
-
+</p>
+<!-- COPY -->
+<p id="footer-copyright">
     © 2025 Genialabile. All Rights Reserved.
 </p>
-
