--- a/2footer.html
+++ b/2footer.html
@@ -23,7 +23,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!-- MUST -->
 <p id="footer-links">
-    <a href="https://genialabile.com/cli" class="link-live"
+    <a href="https://genialabile.com/cli" class="link-live" style="font-size: 0.9rem;"
     aria-label="Genialabile Live CLI Pitch" title="Genialabile Live CLI Pitch">
     ◉</a>
     |
@@ -47,7 +47,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     aria-label="Accessibility" title="Accessibility">
     ACCESS</a>
     |
-    <a href="https://genialabile.com/" class="link-static"
+    <a href="https://genialabile.com/" class="link-static" style="font-size: 0.9rem;"
     aria-label="Genialabile Home Page" title="Genialabile Home Page">
     ◎</a>
 </p>
