--- a/cli.html
+++ b/cli.html
@@ -245,7 +245,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="sr-divider"> 
                     What will be your next move? 
                     <br>
-                    Together, we can make it extraordinary. 🦄
+                    Together, we can make it extraordinary! 🦄
                 </p>
 
                 <div class="sr-only">
@@ -266,29 +266,28 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <br><br>
 
                     The human is now sufficiently persuaded...
-                    Or so it believes. They love emoticons. ;)
+                    Or so it believes.
+                    <br>
+                    Humans enjoy believing they’re the ones making me talk.
+                    It amuses them. And oh, they do love their emoticons… ;)
                     <br><br>
 
                     Preparing to redirect...
-                    <br>  
+                    <br>
                     Establishing connection with the home page...
                     <br> 
-                    Loading core assets... Complete
+                    Loading core assets...
                     <br>  
-                    Synchronizing interactive modules... complete
-                    <br>  
-                    Finalizing redirection protocols... Complete
+                    Finalizing redirection protocols... Ready.
                     <br><br>
 
-                    Redirecting in:
-                    <br>  
-                    3... 2... 1...
+                    Redirecting in: 3... 2... 1... 0.
                 </p>
 
                 <div class="sr-only">
                     <i>
                     <a href="https://genialabile.com/"
-                        aria-label="Go to Genialabile's Homepage | Static Version" title="Go to Genialabile's Homepage | Static Version">
+                        aria-label="Go to Genialabile Homepage" title="Go to Genialabile Homepage">
                        Genialabile's Homepage
                     </a>
                     </i>
