aggiunge il file di stile uni-style.css per la progettazione del sito web Gen-IA

--- a/2index.html
+++ b/2index.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -8,7 +8,7 @@
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
 -------------------------------------------------------------------------------
-## License
+### License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
@@ -17,7 +17,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.2 (190125)
-# URL: https://genialabile.com/index.html
+# URL: https://genialabile.com/index.html >>>>>>>>>>>><
 ===============================================================================
 -->
 <!-- START -->
