--- a/2footer.html
+++ b/2footer.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -8,7 +8,7 @@
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
 -------------------------------------------------------------------------------
-## License
+### License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
@@ -23,10 +23,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!-- MUST -->
 <p id="footer-links">
+    <!--
     <a href="https://genialabile.com/cli" class="link-live" style="font-size: 0.8rem;"
     aria-label="Genialabile Live CLI Pitch" title="Genialabile Live CLI Pitch">
     ◉</a>
     |
+    -->
+    <!--
+    <a href="https://genialabile.com/gpt" class="imp-p"
+    aria-label="Genialabile ChatGPT Web-App" title="Genialabile ChatGPT Web-App">
+    GPT</a>
+    |
+    -->
     <a href="https://genialabile.com/contacts" class="imp-p"
     aria-label="Contact & Social" title="Contact & Social">
     CONTACT</a>
@@ -46,10 +54,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <a href="https://genialabile.com/accessibility" class="imp-p"
     aria-label="Accessibility" title="Accessibility">
     ACCESS</a>
+    <!--
     |
     <a href="https://genialabile.com/" class="link-static" style="font-size: 0.8rem;"
     aria-label="Genialabile Home Page" title="Genialabile Home Page">
     ◎</a>
+    -->
 </p>
 <!-- COPY -->
 <p id="footer-copyright">
