aggiorna i link nel footer e modifica lo stile del footer con un effetto blur e un nuovo colore di sfondo; migliora la transizione e rimuove i commenti di debug

--- a/2footer.html
+++ b/2footer.html
@@ -29,12 +29,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
     ◉</a>
     |
     -->
-    <!--
-    <a href="https://genialabile.com/gpt" class="imp-p"
+    <a href="https://genialabile.com/cli" class="imp-p"
     aria-label="Genialabile ChatGPT Web-App" title="Genialabile ChatGPT Web-App">
     GPT</a>
     |
-    -->
     <a href="https://genialabile.com/contacts" class="imp-p"
     aria-label="Contact & Social" title="Contact & Social">
     CONTACT</a>
