ottimizza il codice del footer; migliora la leggibilità dei commenti e applica un effetto blur al background

--- a/2header.html
+++ b/2header.html
@@ -65,7 +65,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- About -->
 <link rel="author" href="https://genialabile.com/contacts">
 
-<!-- SCRIPT -->
+<!-- // SCRIPT // -->
 
 <!-- Redirect HTTP to HTTPS -->
 <script>
@@ -73,7 +73,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
     }
 </script>
-
 <!--Style Fallback -->
 <style>
     body {
@@ -86,7 +85,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         opacity: 1;
     }
 </style>
-
 <!-- Preload JS -->
 <script>
     document.addEventListener("DOMContentLoaded", () => {
