--- a/cli.html
+++ b/cli.html
@@ -51,7 +51,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <div class="sr-only" role="region" aria-labelledby="sr-title">
-                <h2 id="sr-title">Screen Reader Accessible Content</h2>
+                <h2 id="sr-title">Screen Reader Content</h2>
             </div>
 
             <h1>
@@ -77,6 +77,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 });
             </script>
 
+            <!-- Padder -->
+            <div class="divider-with-padding"></div>
+            
            <!-- compiler.js -->
             <div id="typing-container" aria-hidden="true">
                 <div id="typing-effect"></div>
