--- a/cli.html
+++ b/cli.html
@@ -62,6 +62,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </a>
             </h1>
 
+            <!-- Spacer Divider -->
+            <div class="divider-with-padding"></div>
+
             <!-- Compiler-Force -->
             <script>
                 document.addEventListener('DOMContentLoaded', function () {
@@ -77,9 +80,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 });
             </script>
 
-            <!-- Padder -->
-            <div class="divider-with-padding"></div>
-            
            <!-- compiler.js -->
             <div id="typing-container" aria-hidden="true">
                 <div id="typing-effect"></div>
