--- a/2footer.html
+++ b/2footer.html
@@ -17,7 +17,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.2 (190125)
-# URL: https://genialabile.com/2footer.html
+# URL: https://genialabile.com/footer.html
 ===============================================================================
 -->
 
@@ -31,7 +31,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     -->
     <a href="https://genialabile.com/cli" class="imp-p"
     aria-label="Genialabile ChatGPT Web-App" title="Genialabile ChatGPT Web-App">
-    GPT</a>
+    CLI</a>
     |
     <a href="https://genialabile.com/contacts" class="imp-p"
     aria-label="Contact & Social" title="Contact & Social">
