--- a/2header.html
+++ b/2header.html
@@ -31,15 +31,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Author & Copyright -->
 <meta name="author" content=" GENiALABILE by seiseisette">
 <meta name="copyright" content="© 2025 Genialabile. All Rights Reserved.">
-<!-- Gen-ia Tags -->
-<meta name="Genialabile-access" content="true">
-<meta name="GENiALABILE-access" content="true">
-<meta name="GENiALABILE" content="true">
 <!-- Themes -->
 <meta name="color-scheme" content="dark">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 <meta name="apple-mobile-web-app-title" content="Genialabile">
+<!-- Gen-ia Tags -->
+<meta name="Genialabile-access" content="true">
+<meta name="GENiALABILE-access" content="true">
+<meta name="Gen-ia-access" content="true">
+<meta name="GENiALABILE" content="true">
+<meta name="Genialabile" content="true">
+<meta name="Gen-ia" content="true">
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://genialabile.com/assets/icons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="https://genialabile.com/assets/icons/favicon.svg">
