--- a/gpt.html
+++ b/gpt.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
