--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -8,7 +8,7 @@
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
 -------------------------------------------------------------------------------
-## License
+### License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
@@ -16,48 +16,59 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
+# Version: v3.2 (190125)
 # URL: https://genialabile.com/header.html
 ===============================================================================
 -->
 
-  <!-- Meta Tags -->
+<!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<meta name="GENiALABILE-access" content="true">
+<!-- Security Headers -->
+<meta name="referrer" content="no-referrer-when-downgrade">
+<meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+<!-- Author & Copyright -->
+<meta name="author" content=" GENiALABILE by seiseisette">
+<meta name="copyright" content="© 2025 Genialabile. All Rights Reserved.">
+<!-- Themes -->
 <meta name="color-scheme" content="dark">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-<meta name="apple-mobile-web-app-title" content="GENiALABILE">
-
+<meta name="apple-mobile-web-app-title" content="Genialabile">
+<!-- Gen-ia Tags -->
+<meta name="Genialabile-access" content="true">
+<meta name="GENiALABILE-access" content="true">
+<meta name="Gen-ia-access" content="true">
+<meta name="GENiALABILE" content="true">
+<meta name="Genialabile" content="true">
+<meta name="Gen-ia" content="true">
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://genialabile.com/assets/icons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="https://genialabile.com/assets/icons/favicon.svg">
 <link rel="shortcut icon" href="https://genialabile.com/assets/icons/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="https://genialabile.com/assets/icons/apple-touch-icon.png">
-
 <!-- Manifest -->
 <link rel="manifest" href="https://genialabile.com/site.webmanifest" crossorigin="use-credentials">
-
 <!-- Preconnect for Performance -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-<!-- Preload Fonts -->
+<!-- Roboto Font -->
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" crossorigin="anonymous"></noscript>
-
+<!-- Secondary Font -->
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" crossorigin="anonymous"></noscript>
-
 <!-- Preload CSS -->
-<link rel="preload" href="https://genialabile.com/assets/styles/uni-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-<noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/uni-style.css" crossorigin="anonymous"></noscript>
-
+<link rel="preload" href="https://genialabile.com/assets/styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+<noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/main.css" crossorigin="anonymous"></noscript>
 <!-- Preload Font Awesome -->
 <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></noscript>
+<!-- About -->
+<link rel="author" href="https://genialabile.com/contacts">
+
+<!-- // SCRIPT // -->
 
 <!-- Redirect HTTP to HTTPS -->
 <script>
@@ -65,7 +76,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
     }
 </script>
-
 <!--Style Fallback -->
 <style>
     body {
@@ -78,6 +88,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         opacity: 1;
     }
 </style>
+<!-- Preload JS -->
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         document.body.classList.add("loaded");
