--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -8,7 +8,7 @@
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
 -------------------------------------------------------------------------------
-## License
+### License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
@@ -16,46 +16,50 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
+# Version: v3.2 (190125)
 # URL: https://genialabile.com/footer.html
 ===============================================================================
 -->
-<!-- START -->
-<!--// STARTLINE & SAY HI //--->
 
-    <!-- MUST -->
-        <p id="footer-text footer-banner">
-            <a href="https://genialabile.com/gpt" class="link-live"
-            aria-label="Genialabile Live Home Page">◉</a>
-            |
-            <a href="https://genialabile.com/contacts" class="imp-p"
-            aria-label="Contact & Social">CONTACT</a>
-            |
-            <a href="https://genialabile.com/terms-and-conditions" class="imp-p"
-            aria-label="Terms & Conditions">TERMS</a>
-            |
-            <a href="https://genialabile.com/privacy-policy" class="imp-p"
-            aria-label="Privacy Policy">PRIVACY</a>
-            |
-            <a href="https://genialabile.com/cookie-policy" class="imp-p"
-            aria-label="Cookie Policy">COOKIE</a>
-            |
-            <a href="https://genialabile.com/accessibility" class="imp-p"
-            aria-label="Accessibility">ACCESS</a>
-            |
-            <a href="https://genialabile.com/" class="link-static"
-            aria-label="Genialabile Static Home Page">◎</a>
-        </p>
-    <!-- MUST -->
-    
-    <!-- COPY -->
-        <p id="footer-text footer-banner">
-            © 2025 Genialabile. All Rights Reserved.
-            <!--
-            © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-            Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
-        -->
-        </p>
-     <!-- COPY -->
-
-<!---// ENDLINE & SAY BYE //--->
+<!-- MUST -->
+<p id="footer-links">
+    <!--
+    <a href="https://genialabile.com/cli" class="link-live" style="font-size: 0.8rem;"
+    aria-label="Genialabile Live CLI Pitch" title="Genialabile Live CLI Pitch">
+    ◉</a>
+    |
+    -->
+    <a href="https://genialabile.com/cli" class="imp-p"
+    aria-label="Genialabile ChatGPT Web-App" title="Genialabile ChatGPT Web-App">
+    CLI</a>
+    |
+    <a href="https://genialabile.com/contacts" class="imp-p"
+    aria-label="Contact & Social" title="Contact & Social">
+    CONTACT</a>
+    |
+    <a href="https://genialabile.com/terms-and-conditions" class="imp-p"
+    aria-label="Terms & Conditions" title="Terms & Conditions">
+    TERMS</a>
+    |
+    <a href="https://genialabile.com/privacy-policy" class="imp-p"
+    aria-label="Privacy Policy" title="Privacy Policy">
+    PRIVACY</a>
+    |
+    <a href="https://genialabile.com/cookie-policy" class="imp-p"
+    aria-label="Cookie Policy" title="Cookie Policy">
+    COOKIE</a>
+    |
+    <a href="https://genialabile.com/accessibility" class="imp-p"
+    aria-label="Accessibility" title="Accessibility">
+    ACCESS</a>
+    <!--
+    |
+    <a href="https://genialabile.com/" class="link-static" style="font-size: 0.8rem;"
+    aria-label="Genialabile Home Page" title="Genialabile Home Page">
+    ◎</a>
+    -->
+</p>
+<!-- COPY -->
+<p id="footer-copyright">
+    © 2025 Genialabile. All Rights Reserved.
+</p>
