Aggiornamento del testo da "🌱 Began" a "🌱 Grow" in più file; miglioramenti di formattazione e rimozione di spazi superflui.

--- a/2index.html
+++ b/2index.html
@@ -77,7 +77,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
                 <p>
                     <h2><br>
-                        🌱 Began
+                        🌱 Grow
                     </h2> 
                     <hr class="thin-line">
                         As a pilot project with its first version, focusing on internal tests and selected beta testers.
