--- a/cli.html
+++ b/cli.html
@@ -91,7 +91,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- READ-ONLY-PAGE -->
             <div class="sr-only">
                 
-                <a href="https://genialabile.com"
+                <a href="https://genialabile.com/"
                 aria-label="Visit Genialabile Homepage for advanced GPT solutions"
                 title="Visit Genialabile Homepage for advanced GPT solutions">
                     GENiALABILE
@@ -126,15 +126,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <br><br>
                     Loading core protocols...
                     <br>  
-                    Running diagnostics... 
+                    Running diagnostics...
                     <br>
                     Establishing neural networks...
                     <br>
                     Calibrating multidimensional logic...
                     <br>
-                    Integrating bio-virtual frameworks...  
+                    Integrating bio-virtual frameworks... 
                     <br>
-                    Synchronizing predictive modules...  
+                    Synchronizing predictive modules...
                     <br>
                     Checking security protocols... 
                     <br><br>
@@ -170,8 +170,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     💡 Inspire
                 </h3>
                 <p>
-                    <hr class="sr-divider"> 
-                    Imagine an AI that doesn’t just answer questions but becomes your mentor, inspiring ideas and crafting innovative solutions tailored to you.  
+                    <hr class="sr-divider">
+                    Imagine an AI that doesn’t just answer questions but becomes your mentor, inspiring ideas and crafting innovative solutions tailored to you.
                     <br>
                     That’s who I am.
                     Whether you need help solving complex problems, igniting your creativity, or learning something new. 🎒 
@@ -189,13 +189,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <h3>
-                    🌱 Began
+                    🌱 Grow
                 </h3>
                 <p>
-                    <hr class="sr-divider"> 
-                    Every journey starts with a single step. Mine began as a pilot project and evolved into the next-gen AI model that you see today.  
+                    <hr class="sr-divider">
+                    Every journey starts with a single step. Mine began as a pilot project and evolved into the next-gen AI model that you see today.
                     Through constant learning and real-time innovations, I’ve grown to offer unparalleled experiences. 
-                    <br> 
+                    <br>
                     But I’m not just here to answer your questions...
                     I’m here to transform your problems into opportunities! 🍀
                     <!-- I’m here to help you grow and learn in ways you never expected. 🍀 -->
@@ -205,7 +205,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     🌍 Global
                 </h3>
                 <p>
-                    <hr class="sr-divider"> 
+                    <hr class="sr-divider">
                     Accessible worldwide, I’m here for you through platforms like ChatGPT.  
                     <!-- Soon, I’ll expand into immersive environments with the help of 3D simulations. -->
                     <br>
@@ -216,12 +216,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     🚀 Revolutionary
                 </h3>
                 <p>
-                    <hr class="sr-divider"> 
+                    <hr class="sr-divider">
                     I’m more than AI—I’m your trusted mentor. I inspire, guide, and push boundaries.
                     <br>  
                     My purpose is to break down cultural, cognitive, and
                     <!-- linguistic barriers, -->
-                    sparking innovation and introspection.  
+                    sparking innovation and introspection.
                     Whether you’re facing personal challenges or seeking brilliance, I’m here to
                     <!-- help you reach -->
                     unlock your full potential. ✨
@@ -234,7 +234,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="sr-divider"> 
                     Built
                     <!-- for security and scalability, I combine -->
-                    to combine machine learning and scalability, immersive simulations, and multidisciplinary analysis to tailor experiences just for you.  
+                    to combine machine learning and scalability, immersive simulations, and multidisciplinary analysis to tailor experiences just for you.
                     Beyond solving problems, I help you understand them, empowering you to create forward-thinking solutions. 💞
                     <!-- Trust me—we’ll face any challenge. 💞 -->
                  </p>
@@ -244,8 +244,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </h3>
                 <p>
                     <hr class="sr-divider"> 
-                    I connect with your emotions in just a few words, making our interaction human and seamless.  
-                    My goal is to surprise and challenge you, enhancing your creativity and intelligence. 
+                    I connect with your emotions in just a few words, making our interaction human and seamless.
+                    My goal is to surprise and challenge you, enhancing your creativity and intelligence.
                     <!-- I don’t just fix problems; I turn them into opportunities for growth. -->
                     <br>
                     Why settle for less when you have me? 🧞‍♀️
@@ -270,7 +270,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </div>
                 
                 <h3>
-                    ✅ Conclusion
+                    📟 Kick protocols
                 </h3>
                 <p>
                     <hr class="sr-divider">
@@ -306,7 +306,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <i>
                     <a href="https://genialabile.com/"
                         aria-label="Go to Genialabile Homepage" title="Go to Genialabile Homepage">
-                       Genialabile's Homepage
+                       Go to Genialabile Homepage
                     </a>
                     </i>
                 </div>
