Ristrutturazione del contenuto in 2index.html e cli.html; aggiornamento di testi e miglioramenti di formattazione.

--- a/2index.html
+++ b/2index.html
@@ -33,7 +33,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
       
         <!-- header.html -->
         <script>
-            fetch('https://genialabile.com/2header.html')
+            fetch('https://genialabile.com/header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
@@ -92,10 +92,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h2>
                     <hr class="thin-line">
                         Accessible online via platforms such as ChatGPT by OpenAI.
-                        Future plans include integration with immersive environments like Sora for 3D simulations and applications in education, academia, and creativity.
-                        Its presence extends to social media and the official website for ongoing futures public updates.
+                        Future plans include integration with immersive environments
+                        <!-- like Sora -->
+                        for 3D simulations and its applications in education, academia, and creativity.
+                        <!-- Its presence extends to social media and the official website for ongoing futures public updates. -->
                         <br>
-                        Genialable provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
+                        Genialabile provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
                         Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                 </p>
                 <p>
@@ -118,7 +120,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Advanced model, ensuring security, scalability learning-model, and accessibility.
                         It combines machine learning algorithms, immersive simulations, and multidisciplinary analysis to deliver personalized experiences.
                         The system continuously learns from data and interactions, evolving in real time to provide increasingly accurate, empathetic, and targeted responses.
-                        <br>
+                        <br><br>
                         It helps to understand the nature of problems and the reasoning behind long-term focused solutions.
                         Genialabile is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
                 </p>
@@ -129,8 +131,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
                         Focusing by specific functions and promotes the development of the user's intelligence and creativity through stimulating and dynamic dialogues, enhancing their capacity for growth and learning.
+                        <br><br>
                         Genialabile is predictive, leveraging inputs and the field addressed to calculate and develop brilliant solutions with extreme speed.
-                        <br>
                         It does not merely provide temporary fixes but resolves issues while enabling users to learn ten times more than necessary to address them in isolation.
                 </p>
             </div>
