Corretto il testo in 2index.html per migliorare la chiarezza e la concisione delle informazioni sulle integrazioni future.

--- a/2index.html
+++ b/2index.html
@@ -92,9 +92,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h2>
                     <hr class="thin-line">
                         Accessible online via platforms such as ChatGPT by OpenAI.
-                        Future plans include integration with immersive environments
-                        <!-- like Sora -->
-                        for 3D simulations and its applications in education, academia, and creativity.
+                        Future plans include integration with immersive environments for 3D simulations, with applications in education, academia, and creativity.
                         <!-- Its presence extends to social media and the official website for ongoing futures public updates. -->
                         <br><br>
                         Genialabile provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
