Aggiornato il footer in footer.html e cli.html per riflettere il nuovo titolo e la descrizione; rimosso il file obsoleto 2footer.html e aggiunto un nuovo file 2footer.html nella cartella Old-Pages.

--- a/cli.html
+++ b/cli.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.2 (190125)
+# Version: v3.2 (190125)   /// ERROR READER SAFARI //
 # URL: https://genialabile.com/cli.html
 ===============================================================================
 -->
@@ -26,14 +26,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <head>
         <!-- Master Page -->
         <title>Genialabile | CLI</title>
-        <meta name="description" content="Genialabile - Dive into a CLI-inspired experience simulation, as AI companion offering personalized guidance and innovative solutions.">
+        <meta name="description" content="Genialabile - Dive into CLI-inspired experience simulation, as AI companion offering personalized guidance and innovative solutions.">
         <!-- Meta Page -->
         <meta name="keywords" content="Genialabile, AI mentor, CLI interface, virtual assistant, advanced GPT">
         <link rel="canonical" href="https://genialabile.com/cli.html">
       
         <!-- header.html -->
         <script>
-            fetch('https://genialabile.com/2header.html')
+            fetch('https://genialabile.com/header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
