--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     |
     -->
     <a href="https://genialabile.com/cli" class="imp-p"
-    aria-label="Genialabile ChatGPT Web-App" title="Genialabile ChatGPT Web-App">
+    aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
     CLI</a>
     |
     <a href="https://genialabile.com/contacts" class="imp-p"
