Corretto il markup in cli.html rimuovendo un'interruzione di riga non necessaria nel link a GENiALABILE.

--- a/cli.html
+++ b/cli.html
@@ -94,8 +94,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <a href="https://genialabile.com/"
                 aria-label="Visit Genialabile Homepage for advanced GPT solutions"
                 title="Visit Genialabile Homepage for advanced GPT solutions">
-                    GENiALABILE
-                </a>
+                    GENiALABILE</a>
 
                 <h2><br>
                     🎺 Introduction
