Rimosso un commento superfluo nel gestore dell'evento touchend in cli.html

--- a/cli.html
+++ b/cli.html
@@ -76,7 +76,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             link.style.opacity = '0.8'; 
                         });
                         link.addEventListener('touchend', () => {
-                            link.style.opacity = '1'; // Ripristina l'opacità
+                            link.style.opacity = '1';
                         });
                     });
                 });
