Modificato il valore della proprietà box-shadow nel footer per migliorare l'aspetto visivo.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!-- 
 ===============================================================================
-Project: genialabile.com
-Website: Minimal welcome website
+# Project: genialabile.com
+# Website: Minimal welcome website
 ===============================================================================
 
-GENiALABILE
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
 -------------------------------------------------------------------------------
-License
+### License
 © 2025 GENiALABILE. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
@@ -16,8 +16,8 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-Version: v3.2 (190125)
-URL: https://genialabile.com/index.html
+# Version: v3.2 (190125)
+# URL: https://genialabile.com/index.html
 ===============================================================================
 -->
 
@@ -26,10 +26,10 @@ URL: https://genialabile.com/index.html
     <head>
         <title>Genialabile | Home</title>
         <meta name="description" content="Genialabile - Homepage of the AI mentor and virtual assistant. Quick features overview.">
-        <!-- Meta keywords for search engines -->
+        <!-- Meta Page -->
         <meta name="keywords" content="Genialabile Homepage. Gen-ia, AI mentor, virtual assistant, Advanced GPT, Pitch, Quick features overview">
         <link rel="canonical" href="https://genialabile.com/index.html">
-      
+
         <!-- Fetching header dynamically -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -52,13 +52,11 @@ URL: https://genialabile.com/index.html
             <h1>
                 <a href="https://genialabile.com/"
                 aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
-                    GENiALABILE
-                </a>
+                GENiALABILE</a>
             </h1>
 
             <!-- Content Section -->
             <div>
-                <!-- Inspire Section -->
                 <p>
                     <h2><br>💡 Inspire</h2>
                     <hr class="thin-line">
@@ -69,8 +67,6 @@ URL: https://genialabile.com/index.html
                     Genialabile is more than just an assistant; it’s a companion for intellectual and personal growth, unparalleled in its field.
                     Developed to push boundaries, it runs in beta as an "on-the-fly project" — in preview access only — and is constantly evolving as CustomGPT, powered by OpenAI.
                 </p>
-
-                <!-- Combine Section -->
                 <p>
                     <h2><br>🧠 Combine</h2>
                     <hr class="thin-line">
@@ -80,8 +76,6 @@ URL: https://genialabile.com/index.html
                     It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
                     Whether it’s business planning, emotional support, or interdisciplinary learning, Genialabile excels in bridging heart and mind.
                 </p>
-
-                <!-- Grow Section -->
                 <p>
                     <h2><br>🌱 Grow</h2>
                     <hr class="thin-line">
@@ -91,8 +85,6 @@ URL: https://genialabile.com/index.html
                     Through continuous evolution, the system integrates real-time innovations to keep pace with user needs and emerging technologies.
                     It does not simply provide answers (like standard AI models) but guides users towards solutions that stimulate personal growth in any field.
                 </p>
-
-                <!-- Global Section -->
                 <p>
                     <h2><br>🌍 Global</h2>
                     <hr class="thin-line">
@@ -102,8 +94,6 @@ URL: https://genialabile.com/index.html
                     Genialabile provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
                     Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                 </p>
-
-                <!-- Revolutionary Section -->
                 <p>
                     <h2><br>🚀 Revolutionary</h2>
                     <hr class="thin-line">
@@ -114,8 +104,6 @@ URL: https://genialabile.com/index.html
                     The mission is to make complex knowledge accessible and to support each user in achieving their full potential.
                     It adapts and understands human nature.
                 </p>
-
-                <!-- Hybrid Section -->
                 <p>
                     <h2><br>🤖 Hybrid</h2>
                     <hr class="thin-line">
@@ -126,8 +114,6 @@ URL: https://genialabile.com/index.html
                     It helps to understand the nature of problems and the reasoning behind long-term focused solutions.
                     Genialabile is a guide, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
                 </p>
-
-                <!-- Genius Section -->
                 <p>
                     <h2><br>🎻 Genius</h2>
                     <hr class="thin-line">
@@ -142,7 +128,7 @@ URL: https://genialabile.com/index.html
             <!-- Preloader -->
             <div id="preloader"></div>
 
-            <!-- Footer Banner -->
+            <!-- Footer Banner Style -->
             <div id="footer-banner">
                 <div id="footer-content"></div>
             </div>
