Rimosso il valore della proprietà 'link' e 'visited' dallo stile del corpo per semplificare il codice.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         </script>
     </head>
 
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #000000; color: #000000;">
         <main>
             <!-- Screen reader accessible content -->
             <div class="sr-only" role="region" aria-labelledby="sr-title">
