--- a/cli.html
+++ b/cli.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.2 (190125)   /// ERROR READER SAFARI //
+# Version: v3.2 (190125)
 # URL: https://genialabile.com/cli.html
 ===============================================================================
 -->
@@ -50,7 +50,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <!-- SHIFT -->
 
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #000000; color: #000000;">
         <main>
             <div class="sr-only" role="region" aria-labelledby="sr-title">
                 <h2 id="sr-title">Screen Reader Content</h2>
