Aggiornato il commento per il contenuto accessibile agli screen reader in index.html per evidenziare l'importanza.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <body style="background-color: #000000; color: #000000;">
         <main>
-            <!-- Screen reader accessible content
+            <!-- Screen reader accessible content // IMPORTANT
             <div class="sr-only" role="region" aria-labelledby="sr-title">
                 <h2 id="sr-title">Screen Reader Content</h2>
             </div>
-            Screen reader accessible content -->
+            IMPORTANT // Screen reader accessible content -->
 
             <!-- Main title -->
             <h1>
