--- a/accessibility.html
+++ b/accessibility.html
@@ -30,7 +30,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="keywords" content="Genialabile, Accessibility Page. ADA, CCPA, WCAG, Screen Reader, Keyboard Navigation">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
        
-        <!-- header.html -->
+        <!-- Fetching header dynamically -->
         <script>
             fetch('https://genialabile.com/header.html')
                 .then(response => response.text())
@@ -39,10 +39,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 })
                 .catch(error => console.error('Error fetching header:', error));
         </script>
-        <!-- header.html --> 
     </head>
-    <!-- SHIFT -->
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+
+    <body style="background-color: #000000; color: #000000;">
         <main>
             <h1>
                 <a href="https://genialabile.com/accessibility"
