--- a/accessibility.html
+++ b/accessibility.html
@@ -121,50 +121,19 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 Last Updated: 16 January 2025
             </p>
         </main>
-        <!-- TRICK -->
-            <div id="footer-banner">
-                <div id="footer-content"></div>
-            </div>
-        <!-- TRICK -->
+        
+        <!-- Preloader -->
+        <div id="preloader"></div>
+
+        <!-- Footer Banner Style -->
+        <div id="footer-banner">
+            <div id="footer-content"></div>
+        </div>
+
+        <!-- Footer -->
         <footer>
-            <!-- footer.html --> 
-            <script>
-                document.addEventListener('DOMContentLoaded', function() {
-                    fetch('https://genialabile.com/footer.html')
-                        .then(response => response.text())
-                        .then(data => {
-                            const footerContent = document.getElementById('footer-content');
-                            footerContent.innerHTML = data;
-                        })
-                        .catch(error => console.error('Errore nel caricamento del footer-banner:', error));
-                document.addEventListener("DOMContentLoaded", () => {
-                            console.log("Pagina caricata, ritardo di avvio in corso...");
-                            setTimeout(() => {
-                                console.log("Avvio dell'animazione dopo il ritardo.");
-                                typeWriter();
-                            }, startDelay);
-                        });
-                    });
-            </script>
-            <!-- footer.html --> 
+            <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
+            <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
         </footer>
-            <!-- FADE --> 
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    setTimeout(function () {
-                        document.body.classList.add("visible");
-                    }, 2000);
-                });
-            </script>
-            <!-- FADE -->
-            <!-- HACK-BUGS --> 
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    setTimeout(function () {
-                        document.body.classList.add("visible");
-                    }, 2000);
-                });
-            </script>
-            <!-- FADE -->  
     </body>
 </html>
